Fix github pages configuration.

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://eshsrobotics.com/
+url: http://eshsrobotics.github.io
 title: ESHS Robotics
 subtitle: Passionate youth exploring technology.
 author: ESHS Robotics
